--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400&display=swap");
 
 * {
   box-sizing: border-box;
-  transition: all ease .2s;
+  transition: all ease 0.2s;
 }
 
 body {
-  font-family: 'Lexend Deca', sans-serif;
+  font-family: "Lexend Deca", sans-serif;
   background-color: #141414;
   color: #ffffff;
   font-weight: 300;
